Fix up merge related compile errors